# CPP

./: CMakeLists.txt
src/: CodeKata.cpp
src/include/: CodeKata.h
test/: CodeKataTest.cpp
